UCF-APR2.4/ftr main/force-app/main/default/objects/ItemSpecifitionIdProductMapping__mdt/ItemSpecifitionIdProductMapping__mdt.object-meta.xml
<CustomObject>
    <label>ItemSpecifitionIdProductMapping</label>
    <pluralLabel>ItemSpecifitionIdProductMappings</pluralLabel>
</CustomObject>