UCF-APR2.4/ftr main/force-app/main/default/objects/ItemSpecifitionIdProductMapping__mdt/fields/EVC_Type__c.field-meta.xml
<CustomField>
    <fullName>EVC_Type__c</fullName>
    <label>EVC Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>