UCF-APR2.4/ftr main/force-app/main/default/objects/ItemSpecifitionIdProductMapping__mdt/fields/OffNetItemSpecifitionIdL2__c.field-meta.xml
<CustomField>
    <fullName>OffNetItemSpecifitionIdL2__c</fullName>
    <label>OffNetItemSpecifitionIdL2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>