UCF-APR2.4/ftr main/force-app/main/default/objects/ItemSpecifitionIdProductMapping__mdt/fields/OnNetItemSpecifitionIdL2__c.field-meta.xml
<CustomField>
    <fullName>OnNetItemSpecifitionIdL2__c</fullName>
    <label>OnNetItemSpecifitionIdL2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>